<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_defaultkeyid_switch"
        android:id="@+id/switch_default_key_id_btn"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_keyboardDefaultKeyIDParams"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_key_id"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:entries="@array/KeyID"
            android:spinnerMode="dialog"
            android:id="@+id/spnKeyBoardDefaultKeyID"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear_keyboardEditKeyIDParams">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dialog_tv_key_id"
                android:gravity="center_vertical"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dialog_ext_keyboard_keyID"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_key_len"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/KeyLen"
            android:id="@+id/dialog_ext_keyboard_KeyLen"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_key_type"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/KeyType"
            android:id="@+id/dialog_ext_keyboard_KeyType"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_key_usage"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/KeyUsage"
            android:id="@+id/dialog_ext_keyboard_KeyUsage"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_kcv_mode"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/KCVMode"
            android:id="@+id/dialog_ext_keyboard_kcvMode"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="KCV:"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dialog_ext_keyboard_kcv"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_key_data"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dialog_ext_keyboard_keyData"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_keyboard_mode"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/KeyboardMode"
            android:id="@+id/dialog_ext_keyboard_KeyboardMode"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_min_len"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dialog_ext_keyboard_minLen"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_max_len"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dialog_ext_keyboard_maxLen"/>
    </LinearLayout>
</LinearLayout>