<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_uart3port_set_config_baudrate"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/BaudRate"
            android:id="@+id/spn_analogserial_baudRate"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_uart3port_set_config_databits"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/DataBit"
            android:id="@+id/spn_analogserial_dataBits"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_uart3port_set_config_paritybit"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/ParityBit"
            android:id="@+id/spn_analogserial_parityBit"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_uart3port_set_config_stopbit"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/StopBits"
            android:id="@+id/spn_analogserial_stopBits"/>
    </LinearLayout>
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/dialog_tv_serial_analog_infrared_reflection"-->
<!--            android:gravity="center_vertical"/>-->
<!--        <Switch-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:id="@+id/sw_analogserial_infraredReflection"/>-->
<!--    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_serial_analog_block_enable"
            android:gravity="center_vertical"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sw_analogserial_blockEnable"/>
    </LinearLayout>

</LinearLayout>